<resources>
    <string name="app_name">Prolific Library</string>
    <string name="action_add">Add</string>
    <string name="action_deleteAll">Delete All</string>


    <string name="toolbar_book">Book</string>
    <string name="title_activity_books_detail">Detail</string>
    <string name="title_activity_add_book">Add a book</string>

    <string name="book_title">Book Title</string>
    <string name="book_author">Author</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_categories">Categories</string>
    <string name="button_submit">Submit</string>
    <string name="button_done">Done</string>

    <string name="menu_share">Share</string>



    <string name="button_checkout">Check Out</string>
    <string name="button_delete">Delete</string>

    <string name="check_out_title">Checkout Info</string>
    <string name="input_your_name">Please input your name here</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
